--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@
     @apply h-full bg-gray-50;
   }
 
-  body, #__next {
+  body,
+  #__next {
     @apply h-full overflow-hidden;
   }
 
@@ -20,6 +21,47 @@
   }
 
   td {
-    @apply px-3 py-4 text-sm text-gray-500
+    @apply px-3 py-4 text-sm text-gray-500;
+  }
+}
+
+/*  CSS Loader Animation */
+.lds-circle {
+  display: inline-block;
+  transform: translateZ(1px);
+
+  /* move loader to center */
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100px;
+  bottom: 0;
+  top: 40%;
+}
+.lds-circle > div {
+  display: inline-block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  background: rgb(37 99 235);
+  animation: lds-circle 8s cubic-bezier(0, 0.3, 0.7, 1) infinite;
+}
+@keyframes lds-circle {
+  0%,
+  100% {
+    animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+  }
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(1800deg);
+    animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+  }
+  100% {
+    transform: rotateY(3600deg);
   }
 }
