--- a/index.css
+++ b/index.css
@@ -23,13 +23,16 @@
   td {
     @apply px-3 py-4 text-sm text-gray-500;
   }
+
+  textarea {
+    resize: none;
+  }
 }
 
-/*  CSS Loader Animation */
-.lds-circle {
+/* ############     CSS Loader Animation     ############ */
+#__loading__indicator {
   display: inline-block;
   transform: translateZ(1px);
-
   /* move loader to center */
   position: absolute;
   left: 0;
@@ -40,16 +43,16 @@
   bottom: 0;
   top: 40%;
 }
-.lds-circle > div {
+#__loading__indicator > div {
   display: inline-block;
   width: 64px;
   height: 64px;
   margin: 8px;
   border-radius: 50%;
-  background: rgb(37 99 235);
-  animation: lds-circle 8s cubic-bezier(0, 0.3, 0.7, 1) infinite;
+  background: rgb(67 56 202);
+  animation: coin_rotate 8s cubic-bezier(0, 0.3, 0.7, 1) infinite;
 }
-@keyframes lds-circle {
+@keyframes coin_rotate {
   0%,
   100% {
     animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
